--- a/src/pages/SignUp.css
+++ b/src/pages/SignUp.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   background-color: #39395f;
   margin: 0 auto;
-  overflow: clip;
+  overflow: auto;
 }
 .login-logo {
   margin: 0 auto;
